[package]
name = "screenshot-archiver"
version = "0.1.0"
edition = "2021"
author = "Frank Wiles <frank@revsys.com>"
about = "Move day old screenshots off the desktop to a folder structore YYYY/MM/DD"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
chrono = "0.4"